--- a/Alkalmazott_mat_lapok/cikk.tex
+++ b/Alkalmazott_mat_lapok/cikk.tex
@@ -430,9 +430,9 @@ A fa minden csúcsa egy aktuális állapotnak felel meg, ahol
 következő adatokat tároljuk:
 \begin{itemize}
   \item Aktuális D-diagram-kezdemény
-  \item Vizsgált él adatai: forrásának sorszáma ($1\ldots\mathrm{elemszám}$),
+  \item Vizsgált él adatai: forrásának sorszáma ($1\ldots$elemszám),
     operációjanak sorszáma ($1\ldots d+1$), céljának sorszáma
-    ($\mathrm{forrás}+1\ldots\mathrm{elemszám}$)
+    (forrás$+1\ldots$elemszám)
 \end{itemize}
 
 Minden csúcsból két irányba tudunk továbbmenni: hozzáadjuk a
