--- a/doktori_konf_20120610/main.tex
+++ b/doktori_konf_20120610/main.tex
@@ -13,6 +13,10 @@
 %\usetheme{Singapore}
 
 \beamertemplatenavigationsymbolsempty
+\beamertemplatetextbibitems
+
+\newcommand{\leftexp}[2]{{\vphantom{#2}}^{#1}{#2}}
+
 
 \title{Face and edge transitive tilings in three dimensional non-Euclidean
 spaces}
@@ -100,17 +104,6 @@ The results discussed above are supported by the grant TÁMOP -
 
 \end{frame}
 
-Egy kis vazlat:
-innen max. 7 slide-om lehet, de inkabb 6
-1. D-symbol bemutatasa I.
-2. Face/Edge-transitive D-symbol bemutatasa II.
-3. D-symbol illusztraciok
-4. Kisebb dimenzios resz D-symbolumok vizsgalata
-5. Ellenkezo irany, eredmenyek
-6. Thurston-sejtes/tetel, celok
-7. Tovabbi megoldando problemak
-8. Questions?
-
 \section{D-symbols}
 \begin{frame}
   \frametitle{D-symbol, an algebraic way to describe tilings}
@@ -165,17 +158,20 @@ innen max. 7 slide-om lehet, de inkabb 6
 \subsection{Example}
 \begin{frame}
   \frametitle{Example}
-  Simple example based on the symmetry breaking of the cube tiling of
+  Simple edge transitive example based on the symmetry breaking of the cube tiling of
   $\mathbb{E}^3$:
   \mode<article>{figure \ref{abra:example1}. As adjacency relations are defined
   for every simplex orbit, we can skip showing the loops which map the orbits
   mirroring to a plane.}
   \begin{figure}
-    FIXME example
-    \mode<article>{\caption{\label{abra:hasab_bari} Red:1, blue:2, green:3}}
+    \mode<article>{\caption{\label{abra:example1} Red:1, blue:2, green:3,
+    yellow:4}}
     \center
-    \includegraphics[width=0.4\textwidth]{hasab_bari.pdf}
-    \includegraphics[width=0.35\textwidth]{hasab_D-graf.pdf}                                                       
+    \includegraphics[width=0.3\textwidth]{d3c4_7_1.pdf}
+    \hfill
+    \includegraphics[width=0.3\textwidth]{d3c4_7_2.pdf}
+    \hfill
+    \includegraphics[width=0.3\textwidth]{d3c4_7.pdf}                                                       
   \end{figure}
   Notation:\\<all>
   \setlength{\unitlength}{1cm}
@@ -196,39 +192,27 @@ innen max. 7 slide-om lehet, de inkabb 6
     \multiput(0,0.1)(0.5,0){3}{\line(1,0){0.2}}
     \multiput(0.35,0.1)(0.5,0){3}{\circle*{0.001}}
   \end{picture}
-  FIXME ide kell ferjen az M mx fv.
+  
+  \begin{equation*}
+    \forall D_i\in\mathcal{D}:\;
+    \mathcal{M}(D_i)=
+    \left(                                                                                                          
+    \begin{array}{cccc}                                                                                             
+      1 & 4 & 2 & 2\\
+      4 & 1 & 3 & 2\\
+      2 & 3 & 1 & 4\\
+      2 & 2 & 4 & 1
+    \end{array}
+    \right)
+  \end{equation*}
+  \mode<article>{
+  \begin{itemize}
+    \item Compatibility between the diagram and the matrix function
+    \item Compatibility with baricentric subdivision
+  \end{itemize}}
 \end{frame}
 
 \section{Constraints}
-\begin{frame}
-  \frametitle{D-symbol, an algebraic way to describe tilings}
-  \begin{itemize}
-    \item Based on the baricentric subdivision of a tiling and its fundamental
-      domain \mode<article>{one can define the placement of the consisting
-      simplices. In a baricentric subdivision the vertices can be indexed with
-      the dimension of its facet. Our definition of a fundamental domain allows
-      inner symmetries.}
-    \item Structure:
-      \begin{itemize}
-        \item D-diagram: $(n+1)$ colored graph, which represents adjacencies of
-          simplex-orbits
-        \item Matrix function on simplex orbits, which represents the number of
-          simplices (not orbits) around a $(n-2)$-dimensional edge
-      \end{itemize}
-    \item Constraints:
-      \begin{itemize}
-        \item {\textbf Compatibility between the diagram and the matrix
-	  function}
-	\item {\textbf Compatibility with baricentric subdivision}
-        \item Lower dimensional constraints
-      \end{itemize}
-    \item Every "nice" tiling has a corresponding D-symbol which is unambigous
-      up to permutation \mode<article>{"Nice" tilings are the ones, whose
-      baricentric subdivision has finitely many simplex-orbits and does not have
-      ideal simplex-vertices except for 0-center or 3-center vertices.}
-  \end{itemize}
-\end{frame}
-
 \begin{frame}
   \frametitle{Lower dimensional constraints}
   From now on we only consider $3$-dimensional D-symbols. \newline
@@ -240,14 +224,14 @@ innen max. 7 slide-om lehet, de inkabb 6
       of the matrix functions.}
     \item We can calculate the combinatorial curvature function of the subsymbol:
       \begin{align*}
-        K(\leftexp{c}{\mathcal{D}}^i)=\sum_{D\in
-        \leftexp{c}{\mathcal{D}}^i}\left(-1+\sum_{\substack{0\le j<k\le d \\
-        j,k\ne i}}\frac{1}{m_{jk}(D)}\right)
-        \begin{array}{cccc}
-          > & & S^2 \\
-          = & 0 & \mathbb{E}^2 \\
-          < & & H^2
-        \end{array}
+	K(\leftexp{c}{\mathcal{D}}^i)=\sum_{D\in
+	\leftexp{c}{\mathcal{D}}^i}\left(-1+\sum_{\substack{0\le j<k\le d \\
+	j,k\ne i}}\frac{1}{m_{jk}(D)}\right)
+	\begin{array}{cccc}
+	  > & & S^2 \\
+	  = & 0 & \mathbb{E}^2 \\
+	  < & & H^2
+	\end{array}
       \end{align*}
       \mode<article>{Based on the above formula one can decide, in which
       $2$-dimensional constant curvature space realizes the tiling.}
@@ -255,22 +239,22 @@ innen max. 7 slide-om lehet, de inkabb 6
   \mode<presentation>{\begin{minipage}[t]{0.45\textwidth}}
     \begin{itemize}
       \item Good orbifold criteria\mode<article>{: In the above mentioned
-        spherical tiling case, we have to exclude bad orbifolds. The following
-options are excluded (given by both Convay's and Macbeath's notations):
-        \begin{align*}
-          u=(+,0;[u];\{\}), & & 1<u;\\
-          *u=(+,0;[];\{(u)\}), & & 1<u;\\
-          uv=(+,0;[u,v];\{\}), & & 1<u<v;\\
-          *uv=(+,0;[];\{(u,v)\}), & & 1<u<v.
-        \end{align*}}
+	spherical tiling case, we have to exclude bad orbifolds. The following
+	options are excluded (given by both Convay's and Macbeath's notations):
+	\begin{align*}
+	  u=(+,0;[u];\{\}), & & 1<u;\\
+	  *u=(+,0;[];\{(u)\}), & & 1<u;\\
+	  uv=(+,0;[u,v];\{\}), & & 1<u<v;\\
+	  *uv=(+,0;[];\{(u,v)\}), & & 1<u<v.
+	\end{align*}}
       \item Visualization:
-        \mode<article>{The subsymbol corresponds to the $(3-1)$-dimensional
-        tiling around the $i$-indexed vertice-class induced by the
-        original D-symbol. So we have to get a spherical tiling around a real
-        simplex-vertice (see Fig. \ref{fig:spherical_ex}), or a Euclidean tiling
-        around an ideal simplex-vertex in the original tiling. We should not get
-        hyperbolic tilings around a simplex-vertex, because this would mean an
-        out-of-model vertex.}
+	\mode<article>{The subsymbol corresponds to the $(3-1)$-dimensional
+	tiling around the $i$-indexed vertice-class induced by the
+	original D-symbol. So we have to get a spherical tiling around a real
+	simplex-vertice (see Fig. \ref{fig:spherical_ex}), or a Euclidean tiling
+	around an ideal simplex-vertex in the original tiling. We should not get
+	hyperbolic tilings around a simplex-vertex, because this would mean an
+	out-of-model vertex.}
     \end{itemize}
   \mode<presentation>{\end{minipage}
   \begin{minipage}[t]{0.5\textwidth}}
@@ -285,13 +269,14 @@ options are excluded (given by both Convay's and Macbeath's notations):
 
 \section{Enumerating D-symbols}
 \begin{frame}
-  Enumerating face and edge transitive D-symbols
+  \frametitle{Enumerating face and edge transitive D-symbols}
   \begin{itemize}
     \item Ambitious goal\mode<article>{: Let's enumerate every possible
       $n$-dimensional tiling with compact fundamental domain using D-symbols.}
-    \item The simpler problem seems possible\mode<article>{, because there are
+    \item Simpler problem: finding every face and edge transitive D-symbol
+      \mode<article>{in $3$-dimensions. This is possible, because there are
       only finitely many face and edge transitive D-symbols.}
-    \item Too many cases\mode<article>{: the output is exponential both in the
+    \item A lot of cases\mode<article>{: the output is exponential both in the
       dimension and the cardinality of the D-diagram.}
     \item There is an ordering on D-diagrams, so they can be enumerated                                            
     \item There is an ordering on matrix-functions, we can enumerate them in $3$
@@ -300,9 +285,10 @@ options are excluded (given by both Convay's and Macbeath's notations):
       infinite chains.) There's another upper bound on one type of parameters
       based on the face or edge transitivity.}
     \item Our algorithms could enumerate the $3$-dimensional edge transitive
-      D-symbols with cardinality at most $18$\mode<article>{. Right now we have
+      D-symbols with cardinality at most $18$ and general D-symbols with
+      cardinality at most $12$\mode<article>{. Right now we have
       some problem with memory consumption, but after implementing a nice
-      solution the other problem would be time.}
+      solution the next problem would be cpu time.}
   \end{itemize}
 \end{frame}
 
@@ -341,16 +327,47 @@ options are excluded (given by both Convay's and Macbeath's notations):
 	\item Lower constraints of parameters
 	\item $S^2$-type splitting\mode<article>{: Indicates a detail in the tiling, which is
 	  shrinkable to a single vertex, so we get a similar tiling with less
-	  simplex-orbits. (Possible bad orbifold problem.)}
+	  simplex-orbits. (Possible bad orbifold problem, see fig. \ref{fig:s2splitting}.)}
+	  \begin{figure}
+	    \mode<article>{\caption{\label{fig:s2splitting} $S^2$-type splitting}}
+	    \center
+	    \includegraphics[height=2.5cm]{d3c3_2_splitting1.pdf}
+	  \end{figure}
 	\item $E^2$-type splitting: \mode<presentation>{"cut along tori"}
 	  \mode<article>{In Thurston-conjecture "cut along tori". This indicates
 	  two parts in the tiling, in both parts the other part can be seen as
-	  an ideal vertex.}
+	  an ideal vertex. There are at least 3 possible combinations, from
+	  which only the first one indicates a splitting, the second one most
+	  likely indicates a fibration and the third one is not possible,
+	  because inside the torus there is a full $2$-dimensional plane. (See
+	  fig. \ref{fig:e2splitting}.)}
+	  \begin{figure}
+	    \mode<article>{\caption{\label{fig:e2splitting} $E^2$-type splittings}}
+	    \center
+	    \includegraphics[height=2.5cm]{d3c3_2_splitting2_alt1.pdf}
+	    \hspace{0.1\textwidth}
+	    \includegraphics[height=2.5cm]{d3c3_2_splitting2_alt2.pdf}
+	    \hspace{0.1\textwidth}
+	    \includegraphics[height=2.5cm]{d3c3_2_splitting2.pdf}
+	  \end{figure}
       \end{itemize}
     \item Find out the signature of the projective space\mode<article>{ with a
       nice large library of articles.}
   \end{itemize}
 \end{frame}
+  \begin{itemize}
+    \item $S^2$-type splitting: Indicates a detail in the tiling, which is
+      shrinkable to a single vertex, so we get a similar tiling \mode<article>{ with
+      less simplex-vertices, so} with less simplex-orbits. (Possible bad
+      orbifold problem.) \mode<article>{(See fig. \ref{fig:s2splitting}.)}
+    \item $E^2$-type splitting: In Thurston-conjecture "cut along tori". This
+      indicates two parts in the tiling, in both parts the other part
+      can be seen as an ideal vertex. \mode<article>{There are at least 3
+      possible combinations, from which only the first one indicates a
+      splitting, the second one most likely indicates a fibration and the third one
+      is not possible, because inside the torus there is a full $2$-dimensional
+      plane. (See fig. \ref{fig:e2splitting}.)}
+  \end{itemize}                      
 
 \begin{frame}
   \nocite{DHM93,D87,Du88,H93,LM90,Ma67,M94,T82,VS93,F94,F03}
