--- a/doktori_konf_20120610/main.tex
+++ b/doktori_konf_20120610/main.tex
@@ -20,7 +20,7 @@
 
 \title{Face and edge transitive tilings in three dimensional non-Euclidean
 spaces}
-\author{Boróczki, Lajos}
+\author{Boróczki, Lajos - Molnár, Emil}
 \date{Budapest, 11-13 June 2012 \\{\tiny Workshop of the BME Graduate School of
 Mathematics and Computer Science}}
 
