--- a/20130624_Ljubjana/main.tex
+++ b/20130624_Ljubjana/main.tex
@@ -16,12 +16,21 @@
 
 \title{On the splitting problem of orbifolds via D-symbols}
 \author{Boróczki, Lajos}
-\date{June 24-28, 2013}
+\date{}
 
 \begin{document}
 
 \begin{frame}
   \maketitle
+  {\center\small
+  BUTE Institute of Mathematics \\
+  Department of Geometry\\
+  Supervisor: dr. Molnár, Emil
+  \vfill
+  CGTA 2013, Ljubljana\\
+  June 24-28, 2013\\
+  \vfill
+  }
 \end{frame}
 
 \begin{frame}
@@ -64,7 +73,7 @@
   \begin{figure}
     \mode<article>{\caption{\label{abra:hasab_bari} Red:1, blue:2, green:3}}
     \center
-    \includegraphics[width=0.4\textwidth]{hasab_bari.pdf}
+    \includegraphics[width=0.4\textwidth]{hasab_bari.png}
     \includegraphics[width=0.35\textwidth]{hasab_D-graf.pdf}
   \end{figure}
   Notation:\\<all>
@@ -275,7 +284,7 @@ tiling.
       \mode<article>{\caption{\label{fig:spherical_ex}Spherical tiling around
       a simplex-vertex}}
       \center
-      \includegraphics[height=2.5cm]{d3c3_2_vertice.pdf}
+      \includegraphics[height=2.5cm]{d3c3_2_vertice.png}
     \end{figure}
   \mode<presentation>{\end{minipage}}
 \end{frame}
@@ -357,7 +366,7 @@ tiling.
       \begin{figure}
 	\mode<article>{\caption{\label{fig:s2splitting} $S^2$-type splitting}}
 	\center
-	\includegraphics[height=2.5cm]{d3c3_2_splitting1.pdf}
+	\includegraphics[height=2.5cm]{d3c3_2_splitting1.png}
       \end{figure}
     \item $E^2$-type splitting: In Thurston-conjecture "cut along tori". This
       indicates two parts in the tiling, in both parts the other part
@@ -368,9 +377,9 @@ tiling.
       \begin{figure}
 	\mode<article>{\caption{\label{fig:e2splitting} $E^2$-type splittings}}
 	\center
-	\includegraphics[height=2.5cm]{d3c3_2_splitting2_alt1.pdf}
+	\includegraphics[height=2.5cm]{d3c3_2_splitting2_alt1.png}
 	\hspace{0.1\textwidth}
-	\includegraphics[height=2.5cm]{d3c3_2_splitting2_alt2.pdf}
+	\includegraphics[height=2.5cm]{d3c3_2_splitting2_alt2.png}
       \end{figure}
   \end{itemize}
 \end{frame}
@@ -403,23 +412,23 @@ tiling.
 \begin{frame}[plain]
   \frametitle{Illustration}
   \only<2>{\mode<presentation>{That looks like a screenshot, let's see the original at
-  \href{http://math.bme.hu/~boroczki/D-symbols-edge-transitive/d3c6/31.html}{my
+  \href{http://math.bme.hu/~boroczki/D-symbols-edge-transitive/d3c6/20.html}{my
   homepage.} }}
-  \mode<article>{Figure \ref{fig:d3c6_31}. looks like a screenshot, let's see
+  \mode<article>{Figure \ref{fig:d3c6_20}. looks like a screenshot, let's see
   the original at
-  \href{http://math.bme.hu/~boroczki/D-symbols-edge-transitive/d3c6/31.html}{my
+  \href{http://math.bme.hu/~boroczki/D-symbols-edge-transitive/d3c6/20.html}{my
   homepage.}
   Constructing a visualisation of the fundamental
   domain for edge transitive tilings is pretty straightforward: Take the 1 or 2
   simplex edges between 0 and 1 vertices, and put around them the simpleces
   using their single parameter.}
   \begin{figure}
-    \mode<article>{\caption{\label{fig:d3c6_31} 31st D-symbol with cardinality 6
+    \mode<article>{\caption{\label{fig:d3c6_20} 20th D-symbol with cardinality 6
     in 3D}}
     \center
-    \includegraphics[height=0.5\textwidth]{d3c6_31.pdf}
+    \includegraphics[width=0.5\textwidth]{d3c6_20.png}
     \hspace{0.1\textwidth}
-    \includegraphics[width=0.3\textwidth]{d3c6_31_diag.pdf}
+    \includegraphics[width=0.3\textwidth]{d3c6_20.pdf}
   \end{figure}
 \end{frame}
 
