cikket irok, salalala

--- a/biblio/dsym.bib
+++ b/biblio/dsym.bib
@@ -36,6 +36,10 @@
   pages   = "367--382"
 }
 
+% D-szimbolum megalapozasa (meg diagram nelkul, csak algebrai leirassal), majd
+% az inverz problema felvetese: Mikor kaptuk egyszeresen osszefuggo manifoldbol
+% az eredmenyt? Az osszes lenyeges feltetel felsorolasa (kisebb dim gomb, 2 dim
+% gomb), peldak.
 @article{D87,
   author  = "A. W. M. Dress",
   title   = "Presentation of discrete groups acting on simply connected
@@ -46,6 +50,8 @@
   pages   = "196--212"
 }
 
+% A hiperbolikus resz nelkuli orbifoldok felsorolasa. (D-szimbolumrol nincs
+% szo.)
 @article{Du88,
   author  = "W. D. Dunbar",
   title   = "Geometric orbifolds",
@@ -66,7 +72,7 @@
   year    = "1990",
   journal = "Arch. Math.",
   volume  = "54",
-  pages   = "511--520"
+  pages   = "511--520",
   publisher = "Springer",
 }
 
@@ -90,7 +96,7 @@
   year    = "1993",
   journal = "Geometriae Dedicata",
   volume  = "47",
-  pages   = "269--296"
+  pages   = "269--296",
   publisher = "Springer",
 }
 
@@ -106,6 +112,8 @@
   address = "Berlin-Heidelberg"
 }
 
+% E3 D-szimbolumok megkeresese, kodolasi mechanizmus, amit DHM93-bol vett at.
+% Egy kis GAP program leirasa.
 @phdthesis{F94,
   author  = "O. Delgado-Friedrichs",
   title   = "Euclidicity Criteria for Three-Dimensional Branched
@@ -114,6 +122,8 @@
   school  = "University of Bielefeld"
 }
 
+% D-szimbolum alkalmazasa a negyzetekkel es a kockakkal valo kovezesre
+% (szimmetria toresekkel.) 
 @article{M94,
   author  = "E. Molnár",
   title   = "Symmetry breaking of the cube tiling and the spatials chess board
@@ -125,6 +135,8 @@
   pages   = "205--238"
 }
 
+% Max 3 elemu D-szimbolumok kivesezese, rendezes bevezetese, definiciok szep
+% leirasa.
 @article{M96,
   author  = "E. Molnár",
   title   = "Discontinous groups in homogeneous {R}iemannian spaces by
@@ -137,6 +149,9 @@
   address = "Debrecen, Hungary"
 }
 
+% Max 5 elemu 3d D-diagram felsorolasa. Egy egyszeru, de naaaaaaagyon lassu
+% algoritmussal. (Ami nekem most 2*10^12 lepes volt, az ezzel az algoritmussal
+% nagyjabol 2*10^89-en lepes lett volna...)
 @article{BSzk02,
   author  = "A. Bölcskei and M. Szél-Koponyás",
   title   = "Construction of {D}-graphs related to periodic tilings",
@@ -146,6 +161,10 @@
   pages   = "21--27",
 }
 
+% D-diagram megfeleloje a kovezesben a Delaney set. Dre85: 2 kovezes
+% "equivariantly equivalent" pontosan akkor, ha D-szimbolumuk izomorf.
+% Kulonben az altalam is implementalt algoritmusok vannak. (Minimalis D
+% homeomorf kep miatt meg egyszer erdemes megnezni.)
 @article{F03,
   author  = "O. Delgado-Friedrichs",
   title   = "Data structures and algorithms for tilings I",
